# blessed-rs-examples

./: Cargo.toml  Taskfile.yml
.sqlx/: query-d422cfbd24902d963a7f388abcf0acef8144d06dcf98c261423b040b993c6ce9.json
db/: Dockerfile  init.sql
src/: anyhow.rs  axum.rs  itertools.rs  main.rs  polars.rs  reqwest.rs  slog.rs  sqlx.rs  thiserror.rs  tokio.rs  tracing.rs
