[package]
name = "blessed-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
itertools = "0.13.0"
napi = "2.16.6"
napi-build = "2.1.3"
napi-derive = "2.16.5"
polars = "0.40.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.8.0"
slog-term = "2.9.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing", "timeout"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
